# realtime_chat

./: .gitignore  docker-compose.yml
client/: package-lock.json  package.json  vite.config.ts
client/src/: App.tsx  main.tsx
client/src/redux/: store.ts
client/src/redux/middleware/: chatMiddleware.ts
client/src/redux/slices/: chatSlice.ts
server/: Cargo.toml
server/src/: lib.rs  scylla_db.rs  websocket.rs
server/src/api/chat/: connection.rs
server/src/config/: config.rs
server/src/model/: chat_group.rs  message.rs  mod.rs  user.rs
