[package]
name = "server"
authors = ["Eugene Ku <eugene.ku000@gmail.com>"]
version = "0.1.0"
edition = "2021"


[dependencies]
actix-web = "4.3.0"
actix-web-actors = "4.2.0"
actix-cors = "0.6.4"
actix = "0.13.0"
dotenv = "0.15.0"
env_logger = "0.10.0"
log = "0.4.20"
scylla = "0.9.0"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
chrono = { version = "0.4.26", features = ["serde"] }